--- a/cqrs-bookstore/pom.xml
+++ b/cqrs-bookstore/pom.xml
@@ -27,6 +27,7 @@
 		<joda-time.version>2.9.9</joda-time.version>
 		<jackson-annotations.version>2.9.1</jackson-annotations.version>
 		<dropwizard.version>1.2.2</dropwizard.version>
+		<lombok.version>1.18.8</lombok.version>
 	</properties>
 
 	<dependencyManagement>
@@ -104,6 +105,11 @@
 				<version>${java.hamcrest.version}</version>
 				<scope>test</scope>
 			</dependency>
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>${lombok.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -123,10 +129,15 @@
 			<artifactId>java-hamcrest</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
 	</dependencies>
 	<modules>
 		<module>cqrs-lib</module>
 		<module>product-catalog-context</module>
 		<module>shopping-context</module>
+		<module>order-context-parent</module>
 	</modules>
 </project>
