1.引入jar依赖 2.创建order-context 3.修改引入接口基础响应对象

--- a/cqrs-bookstore/order-context-parent/pom.xml
+++ b/cqrs-bookstore/order-context-parent/pom.xml
@@ -10,6 +10,22 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>order-context-parent</artifactId>
+    <packaging>pom</packaging>
+    <groupId>se.citerus.cqrs.bookstore.ordercontext</groupId>
 
+    <modules>
+        <module>eventbus-contract</module>
+        <module>order-command</module>
+        <module>order-query</module>
+        <module>sagas</module>
+        <module>publisher-contract-command</module>
+        <module>order-application</module>
+    </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+    </dependencies>
 </project>
