--- a/cqrs-bookstore/order-context-parent/order-application/pom.xml
+++ b/cqrs-bookstore/order-context-parent/order-application/pom.xml
@@ -11,5 +11,40 @@
 
     <artifactId>order-application</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>se.citerus.cqrs.bookstore.ordercontext</groupId>
+            <artifactId>order-command</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>se.citerus.cqrs.bookstore.ordercontext</groupId>
+            <artifactId>publisher-contract-command</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>se.citerus.cqrs.bookstore.ordercontext</groupId>
+            <artifactId>sagas</artifactId>
+        </dependency>
+    </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
