--- a/cqrs-bookstore/shopping-context/pom.xml
+++ b/cqrs-bookstore/shopping-context/pom.xml
@@ -16,13 +16,14 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>se.citerus.cqrs.bookstore</groupId>
-			<artifactId>cqrs-lib</artifactId>
-		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -33,6 +34,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>se.citerus.cqrs.bookstore</groupId>
+			<artifactId>cqrs-lib</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
