--- a/cqrs-bookstore/product-catalog-context/pom.xml
+++ b/cqrs-bookstore/product-catalog-context/pom.xml
@@ -15,10 +15,6 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>se.citerus.cqrs.bookstore</groupId>
-			<artifactId>cqrs-lib</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
@@ -32,13 +28,22 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
+
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<optional>true</optional>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>se.citerus.cqrs.bookstore</groupId>
+			<artifactId>cqrs-lib</artifactId>
 		</dependency>
 	</dependencies>
 
