product-catalog-context repository改用jpa

--- a/cqrs-bookstore/product-catalog-context/src/main/resources/application.properties
+++ b/cqrs-bookstore/product-catalog-context/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 server.port=9998
+
+spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
+
+
+spring.datasource.url=jdbc:h2:file:F:/data/h2/bookstore-product
+spring.datasource.username=test
+spring.datasource.password=test
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
