--- a/cqrs-bookstore/shopping-context/pom.xml
+++ b/cqrs-bookstore/shopping-context/pom.xml
@@ -43,6 +43,11 @@
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 
