shopping-context repository使用jpa

--- a/cqrs-bookstore/shopping-context/src/main/resources/application.properties
+++ b/cqrs-bookstore/shopping-context/src/main/resources/application.properties
@@ -2,3 +2,14 @@ server.port=9999
 
 service.product.uri=http://localhost:9998/products/
 service.product.name=product-catalog-context
+
+spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
+spring.datasource.url=jdbc:h2:file:F:/data/h2/bookstore-shopping
+spring.datasource.username=test
+spring.datasource.password=test
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+#spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
