--- a/cqrs-bookstore/shopping-context/src/main/resources/application.properties
+++ b/cqrs-bookstore/shopping-context/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.username=test
 spring.datasource.password=test
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
