product数据库修改

--- a/cqrs-bookstore/product-catalog-context/src/main/resources/application.properties
+++ b/cqrs-bookstore/product-catalog-context/src/main/resources/application.properties
@@ -1,12 +1,9 @@
 server.port=9998
+server.servlet.context-path=/products
 
 spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
-
-
-spring.datasource.url=jdbc:h2:file:F:/data/h2/bookstore-product
-spring.datasource.username=test
-spring.datasource.password=test
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/bookstore?serverTimezone=GMT%2B8
+spring.datasource.username=root
+spring.datasource.password=111111
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
